fix: replace CommandLineLaunch with ProcessBuilder+SocketAttach to fix JDI handshake in Docker
CommandLineLaunch is unreliable in Alpine/Linux containers due to IPv4/IPv6
dual-stack issues — parent and child JVMs can resolve 'localhost' to different
IP families, causing: IOException: handshake failed - unrecognized message from
target VM.

New approach:
- Start child JVM with ProcessBuilder, binding JDWP explicitly to 127.0.0.1:0
- Strip JDK_JAVA_OPTIONS/JAVA_TOOL_OPTIONS from child env to prevent noise
- Read the chosen port from child stderr via CountDownLatch/AtomicInteger
- Attach with com.sun.jdi.SocketAttach to 127.0.0.1:<port> (always IPv4)

Build verified: BUILD SUCCESS (mvn compile)